manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mtls
  labels:
    app.kubernetes.io/name: mtls
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mtls
